--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,10 +1,9 @@
-name: Check Elixir
+name: elixir linter
 
 on:
   push:
     branches:
       - main
-
 
 jobs:
   lint:
@@ -18,6 +17,5 @@ jobs:
           elixir-version: '1.17.3'
       - run: mix deps.get
       - run: mix format
-      - run: mix credo --strict
+      - run: mix credo
       - run: mix test
-    
